--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^3.9.1",
     "ng2-charts": "^4.0.1",
     "rxjs": "~7.5.7",
+    "sweetalert2": "^11.6.3",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
   },
